# heaven-video-summary

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  GEMINI.md  README.md  config.env  get_playlist.sh  prompt_template.txt  pyproject.toml  requirements.txt  status-legacy.md  status.md  summarize.py  影片重點摘要.md
.github/workflows/: pipeline.yml
docs/: 2026-04-02-youtube-dharma-talk-pipeline-design.md  2026-04-02-youtube-dharma-talk-pipeline.md  req.md
downloads/: downloaded.txt
legacy-speech/: 2016_Merged-timestamps.md  2017_Merged-timestamps.md  2018_Merged-timestamps.md  2019_Merged-timestamps.md  2020_Merged-timestamps.md
legacy-speech/2016/: 2016-07-08-timestamps.md  2016-07-08.md  2016-07-15-timestamps.md  2016-07-15.md  2016-07-22-timestamps.md  2016-07-22.md  2016-07-29-timestamps.md  2016-07-29.md  2016-08-10-timestamps.md  2016-08-10.md  2016-08-12-timestamps.md  2016-08-12.md  2016-09-09-timestamps.md  2016-09-09.md  2016-09-16-timestamps.md  2016-09-16.md  2016-11-11-timestamps.md  2016-11-11.md  2016-12-02-timestamps.md  2016-12-02.md  2016-12-09-timestamps.md  2016-12-09.md  2016-12-14-timestamps.md  2016-12-14.md  2016-12-16-timestamps.md  2016-12-16.md  2016-12-23-timestamps.md  2016-12-23.md
scripts/: 01_fetch.sh  02_transcribe.sh  03_archive.py  04_merge.sh  04_merge_and_sync.sh  clean_transcripts.py  common.sh  common_utils.py  generate_timestamps.py  progress.sh  run.sh  test_hf.py  transcribe_audio.py  transcribe_legacy.py
youtube-dharma-talk/: 2020_Merged-timestamps.md  2021_Merged-timestamps.md  2022_Merged-timestamps.md  2023_Merged-timestamps.md  2024_Merged-timestamps.md  2025_Merged-timestamps.md  2026_Merged-timestamps.md
(+729 files in other folders)
