[tool.poetry]
name = "heaven-vedio-summarizer"
version = "0.1.0"
description = "下載 YouTube 播放清單影片的字幕，並使用 Gemini AI 產生摘要。"
authors = ["Claudia Fang <your-email@example.com>"] # 請替換成您的 email
readme = "README.md" # 建議您建立一個 README 檔案來說明專案
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"  # 根據您的 summarize.py 腳本，設定一個合理的 Python 版本
python-dotenv = "^1.0.1"
tqdm = "^4.66.2"
requests = "^2.31.0"
# 注意：此專案還依賴於系統層級的工具：
# - yt-dlp (用於下載影片資訊)
# - jq (用於解析 JSON)
# - gemini-cli (用於產生摘要)
# 請確保這些工具已安裝在您的系統中，它們無法透過 pip 管理。

[tool.poetry.scripts]
# 這個設定讓您可以使用 'poetry run summarize' 來執行摘要腳本
summarize = "summarize:main"
publish-anytype = "publish_to_anytype:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
